Update Date format prediction.ipynb

--- a/Date format prediction.ipynb
+++ b/Date format prediction.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "BASE_PATH = \"/Users/matias.leone/Documents/Jupyter notebooks/\"\n",
+    "BASE_PATH = \"/SOME_PATH/\"\n",
     "\n",
     "def play_with_date_formats():\n",
     "    import datetime as dt\n",
